package eventplanner.core;

/**
 * An enumeration representing a type of event, eg. a concert, a quiz or a
 * party.
 */
public enum EventType {
    CONCERT, QUIZ, COURSE, PARTY
}
